# tesis_adelanto

./: .gitignore  README.md
posture_game/: CMakeLists.txt  package.xml  requirements.txt  setup.py
posture_game/include/posture_game/: checker_node.hpp  movement_publisher_node.hpp  postures.hpp
posture_game/launch/: emotion_detector_launch.py  extras_launch.py  game_launch.py  usb_cam_launch.py
posture_game/posture_game/: checker_node.py  game_manage.py  game_manage_node.py  mediapipe_node.py  postures.py  speaker_node.py  yaren_gazebo_controller.py
posture_game/scripts/: detect_emotions_node.py  game_manage_node.py  message.py  movement_controller.py  stats_manager.py
posture_game/src/: checker_node.cpp  movement_publisher_node.cpp  postures.cpp
posture_game_interfaces/: CMakeLists.txt  package.xml
posture_game_interfaces/msg/: HolisticLandmarks.msg
results/: Erick_2025-07-05 18-08-16.json  Erick_2025-07-10 10-34-56.json  Erick_2025-07-10 10-47-08.json  Erick_2025-07-10 11-02-43.json  Erick_2025-07-10 11-10-18.json  Erick_2025-07-10 11-35-16.json  Erick_2025-07-14 16-19-22.json  Erick_2025-07-14 16-23-50.json  Erick_2025-07-14 16-28-21.json  Erick_2025-07-16 14-23-02.json  Erick_2025-07-16 14-27-51.json  Erick_2025-07-16 21-59-09.json  Erick_2025-07-20 23-27-16.json  Iesus_2025-07-09 13-54-50.json  Iesus_2025-07-09 14-01-04.json  Iesus_2025-07-10 04-11-36.json  Iesus_2025-07-10 04-28-42.json  Mirka_2025-07-01 17-52-35.json  pochi_2025-07-08 23-52-53.json  pochi_2025-07-09 10-58-30.json
src/posture_game/: package.xml  requirements.txt  setup.cfg  setup.py
src/posture_game/config/: usb_cam_params.yaml  v4l2_params.yaml
src/posture_game/launch/: extras_launch.py  game_launch.py  usb_cam_launch.py  v4l2_launch.py
src/posture_game/posture_game/: camera_listener_node.py  checker_node.py  detect_emotions_node.py  dummy_subscriber.py  game_manage.py  message.py  postures.py  speaker_node.py  stats_manager.py
