<?xml version="1.0"?>
<package format="3">
  <name>posture_game</name>
  <version>0.0.1</version>
  <description>Posture memory game for children with ADHD</description>
  <maintainer email="erickgonza@todo.todo">erickgonza</maintainer>
  <license>MIT</license>

  <!-- Dependencias de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  
  <!-- Dependencias de test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
