<?xml version="1.0"?>
<package format="3">
  <name>posture_game</name>
  <version>0.0.1</version>
  <description>Paquete que valida posturas usando visión por computadora para un robot terapéutico.</description>
  <maintainer email="erickgonzalez1306@gmail.com">Erick Gonzalez</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias principales -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>posture_game_interfaces</depend>

  <!-- Dependencias de pruebas opcionales -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
