<?xml version="1.0"?>
<package format="3">
  <name>posture_game_interfaces</name>
  <version>0.0.1</version>
  <description>Mensajes personalizados para el sistema de posturas</description>
  <maintainer email="erickgonzalez0213@gmail.com">erickgonza</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>
