<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>posture_game</name>
  <version>0.0.1</version>
  <description>Posture memory game for children with ADHD</description>

  <maintainer email="erickgonza@todo.todo">erickgonza</maintainer>
  <license>MIT</license>

  <!-- DEPENDENCIAS EJECUCIÓN -->
  <exec_depend>rclpy</exec_depend>

  <!-- DEPENDENCIAS DE TEST -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
